Fixed minor problems reported by findbugs